Fix issues with scroll bars in discussion notes
Solution: Take into account horizontal scroll bar height when calculating
control height.

Also fixed issues with not updated layout of HtmlPanel control when
no global resizeBoxWidth() is called.
Now HtmlPanel controls recalculate size on each Text change (this
includes font change event) and on each box resize.

Closes #312

--- a/src/App/Resources/common.css
+++ b/src/App/Resources/common.css
@@ -5,8 +5,7 @@ body {
 
 body div {
    font-family: Microsoft Sans Serif, Sans Serif;
-   padding: 1px;
-   border: 1px solid white;
+   padding: 2px;
 }
 
 table {
